--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -8,3 +8,20 @@ body {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 0;
+  border-bottom: 1px solid #282d45;
+  -webkit-text-fill-color: #000;
+  box-shadow: 0 0 0px 1000px #a0c7d1 inset;
+  -webkit-box-shadow: 0 0 0px 1000px #a0c7d1 inset;
+  transition: #a0c7d1 5000s ease-in-out 0s;
+}
